# pii-firewall

./: .gitignore  CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  README.md  ROADMAP.md  SECURITY.md  compose.yml
pii-firewall/: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  quick_test_status.py  run_playground.py
pii-firewall/docs/: guide.html  pii_firewall_demo.ipynb
pii-firewall/src/privacy_firewall/: __init__.py  anonymization_engine.py  cleanup_utils.py  entity_types.py  firewall.py  linguistic_filter.py  llm.py  resolver.py  sdk.py  types.py  unified_detector.py  vault.py
pii-firewall/src/privacy_firewall/language/: __init__.py  detector.py  router.py
pii-firewall/src/privacy_firewall/patterns/: __init__.py  catalog.py  locales.py  validator.py
pii-firewall/src/privacy_firewall/patterns/locales/: __init__.py  (+7 more)
pii-firewall/src/privacy_firewall/presidio_integration/: __init__.py  custom_recognizers.py  engine.py  recognizers.py  spanish_recognizers.py  universal_recognizers.py
pii-firewall/src/privacy_firewall/profiles/: __init__.py  presets.py  profiles.py
pii-firewall/src/privacy_firewall/transformers_ner/: __init__.py  engine.py  models.py
pii-firewall/src/privacy_firewall/web/: app.py
pii-firewall/tests_integration/: README.md  audit_presidio_backend.py  conftest.py  test_fixes.py  test_sdk_secure_call.py  test_transformer_remote.py
pii-firewall/tests_integration/common/: e2e_matrix.py  frontend_queries.py
pii-firewall/tests_integration/languages/: test_english.py  test_french.py  test_german.py  test_italian.py  test_portuguese.py  test_spanish.py
pii-firewall/tests_integration/reports/: gliner_audit_results.json  gliner_audit_results.md  hybrid_audit_results.json  hybrid_audit_results.md  nemotron_audit_results.json  nemotron_audit_results.md  opf_audit_results.json  opf_audit_results.md  presidio_audit_results.json  presidio_audit_results.md  regex_audit_results.json  regex_audit_results.md  transformers_audit_results.json  transformers_audit_results.md
(+28 files in other folders)
